# GuarnieriRamirez-Ejercicio3UTN

./: Bono.h  BonoPorPresentismo.h  BonoPorResultado.h  CMakeLists.txt  Cadete.h  Empleado.h  Gerente.h  Helper.h  README.md  ReciboDeSueldo.h  SistemaLiquidadorDeSueldo.h  helper.h  main.cpp
