cmake_minimum_required(VERSION 3.26)
project(GuarnieriRamirez_Ejercicio3UTN C)

set(CMAKE_C_STANDARD 11)

add_executable(GuarnieriRamirez_Ejercicio3UTN
        helper.h
        main.cpp
        helper.h
        SistemaLiquidadorDeSueldo.h
        helper.h
        Cadete.h
        helper.h
        Cadete.h
        Cadete.h
        Cadete.h
        Empleado.h
)
